# MPP

./: .gitignore  CMakeLists.txt  README.md
back/: CMakeLists.txt
back/mocks/: MockDatabase.cpp  MockDatabase.h  MockNetwork.cpp  MockNetwork.h
back/server/: boost_server.cpp
back/src/: Chat.cpp  Chat.h  ChatApp.cpp  ChatApp.h  Message.cpp  Message.h  PasswordHasher.cpp  PasswordHasher.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp  testmutex.cpp
back/tests/: test_chatapp.cpp  test_chats.cpp
client/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  ClientExample.cpp  LoginDialog.cpp  LoginDialog.h  MessageItem.cpp  MessageItem.h  MessageListWidget.cpp  MessageListWidget.h  NetworkWorker.cpp  NetworkWorker.h
client/resources/: client_resources.qrc  style.qss
client/tests/: CMakeLists.txt  ChatWindowTest.cpp  LoginDialogTest.cpp
server/: BoostServer.cpp
